обработана домашняя страница

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,12 +12,13 @@
             <div class="col-lg-6">
                 <h1 class="mt-5">Магазин</h1>
                 <br>
-                    Добро пожаловать в магазин Лабораторной работы №54.
-                    <b>Бесплатная</b> доставка по городу Алматы. Аутлет: до -70%. До -20% новым покупателям.<br>
+                    Добро пожаловать в интернет-магазин Лабораторной работы №54!
+                    <b>Бесплатная</b> доставка по городу Алматы.<br>
+                 Аутлет: до -70%. До -20% новым покупателям.<br>
                 <b>Проверяющему преподавателю скидка 100%.</b>
                 </p>
                 <button id="start-purchase-btn" type="button" class="btn btn-lg">
-                    <a id="start-purchase-link" href="products.html">
+                    <a id="start-purchase-link" href="{% url 'products' %}">
                         Начать покупки
                     </a>
                 </button>
