--- a/templates/base.html
+++ b/templates/base.html
@@ -30,10 +30,16 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'products' %}">Каталог <i class="fas fa-shopping-bag"></i> </a>
+                    <a class="nav-link" href="{% url 'products:index' %}">Каталог <i class="fas fa-shopping-bag"></i> </a>
+                </li>
+                 <li class="nav-item">
+                    <a class="nav-link" href="http://localhost:8000/admin/products/product/add/">Добавить товар<i class="fa fa-plus-circle"></i> </a>
+                </li>
+                 <li class="nav-item">
+                    <a class="nav-link" href="http://localhost:8000/admin/products/productcategory/add/">Добавить категорию<i class="fa-puzzle-piece"></i> </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="users/login.html">Войти <i class="fas fa-sign-in-alt"></i></a>
+                    <a class="nav-link" href="{% url 'users:login' %}">Войти <i class="fas fa-sign-in-alt"></i></a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -45,7 +51,7 @@
                             <a class="dropdown-item" href="users/profile.html">Профиль</a>
                         </li>
                         <li><a class="dropdown-item" href="orders/orders.html">Заказы</a></li>
-                        <li><a class="dropdown-item" href="#">Админ</a></li>
+                        <li><a class="dropdown-item" href="admin/">Админ</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
