--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
                 <b>Проверяющему преподавателю скидка 100%.</b>
                 </p>
                 <button id="start-purchase-btn" type="button" class="btn btn-lg">
-                    <a id="start-purchase-link" href="{% url 'products' %}">
+                    <a id="start-purchase-link" href="{% url 'products:index' %}">
                         Начать покупки
                     </a>
                 </button>
