--- a/templates/index.html
+++ b/templates/index.html
@@ -12,9 +12,9 @@
             <div class="col-lg-6">
                 <h1 class="mt-5">Магазин</h1>
                 <br>
-                    Добро пожаловать в интернет-магазин Лабораторной работы №54!
+                    Добро пожаловать в интернет-магазин Лабораторной работы №56!
                     <b>Бесплатная</b> доставка по городу Алматы.<br>
-                 Аутлет: до -70%. До -20% новым покупателям.<br>
+                 Скидки: на товары прошлой лабораторной работы до -70%. До -20% новым покупателям.<br>
                 <b>Проверяющему преподавателю скидка 100%.</b>
                 </p>
                 <button id="start-purchase-btn" type="button" class="btn btn-lg">
