--- a/templates/base.html
+++ b/templates/base.html
@@ -30,38 +30,45 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'products:index' %}">Каталог <i class="fas fa-shopping-bag"></i> </a>
+                    <a class="nav-link" href="{% url 'products:index' %}">Каталог товаров<i class="fas fa-shopping-bag"></i> </a>
                 </li>
-                 <li class="nav-item">
-                    <a class="nav-link" href="http://localhost:8000/admin/products/product/add/">Добавить товар<i class="fa fa-plus-circle"></i> </a>
-                </li>
-                 <li class="nav-item">
-                    <a class="nav-link" href="http://localhost:8000/admin/products/productcategory/add/">Добавить категорию<i class="fa-puzzle-piece"></i> </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'users:login' %}">Войти <i class="fas fa-sign-in-alt"></i></a>
-                </li>
-                <li class="nav-item dropdown">
+                {% if user.is_authenticated %}
+                    <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fas fa-user-circle"></i>
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li>
-                            <a class="dropdown-item" href="users/profile.html">Профиль</a>
+                            <a class="dropdown-item" href="{% url 'users:profile' %}">Профиль</a>
                         </li>
-                        <li><a class="dropdown-item" href="orders/orders.html">Заказы</a></li>
-                        <li><a class="dropdown-item" href="admin/">Админ</a></li>
+                     <li>
+                         <a class="dropdown-item" href="#">Заказы</a>
+                     </li>
+                     {% if user.is_superuser or user.is_staff %}
+                        <li>
+                            <a class="dropdown-item" href="{% url 'product_add' %}">Добавить товар</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="http://localhost:8000/admin/products/productcategory/add/">Добавить категорию</a>
+                        </li>
+                            <li><a class="dropdown-item" href="{% url 'admin:index' %}">Админка</a></li>
+                        {% endif %}
                         <li>
                             <hr class="dropdown-divider">
                         </li>
                         <li>
-                            <a class="dropdown-item" href="#">
+                            <a class="dropdown-item" href="{% url 'users:logout' %}">
                                 Выйти
                             </a>
                         </li>
                     </ul>
                 </li>
+                {% else %}
+                    <li class="nav-item">
+                    <a class="nav-link" href="{% url 'users:login' %}">Войти <i class="fas fa-sign-in-alt"></i></a>
+                </li>
+                {% endif %}
             </ul>
         </div>
     </div>
