Изменения шаблонов под классовые представления

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,10 @@
             <div class="col-lg-6">
                 <h1 class="mt-5">Магазин</h1>
                 <br>
-                    Добро пожаловать в интернет-магазин Лабораторной работы №56!
+                    Добро пожаловать в интернет-магазин Лабораторной работы №60! Шел 2 месяц Django.
                     <b>Бесплатная</b> доставка по городу Алматы.<br>
-                 Скидки: на товары прошлой лабораторной работы до -70%. До -20% новым покупателям.<br>
-                <b>Проверяющему преподавателю скидка 100%.</b>
+                 Скидки: на товары предыдущих лабораторных и домашних работ до -70%. До -20% новым покупателям.<br>
+                <b>Проверяющему строгому преподавателю скидка 100%.</b>
                 </p>
                 <button id="start-purchase-btn" type="button" class="btn btn-lg">
                     <a id="start-purchase-link" href="{% url 'products:index' %}">
