--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li>
-                            <a class="dropdown-item" href="{% url 'users:profile' %}">Профиль</a>
+                            <a class="dropdown-item" href="{% url 'users:profile' user.id %}">Профиль</a>
                         </li>
                      <li>
                          <a class="dropdown-item" href="#">Заказы</a>
@@ -50,7 +50,7 @@
                             <a class="dropdown-item" href="{% url 'product_add' %}">Добавить товар</a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="http://localhost:8000/admin/products/productcategory/add/">Добавить категорию</a>
+                            <a class="dropdown-item" href="{% url 'category_add' %}">Добавить категорию</a>
                         </li>
                             <li><a class="dropdown-item" href="{% url 'admin:index' %}">Админка</a></li>
                         {% endif %}
