--- a/templates/product_add.html
+++ b/templates/product_add.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-     <form method="POST">
+       <form action="{% url 'product_add' %}" method="post" enctype="multipart/form-data">>
                 {% csrf_token %}
                 {{ form.as_p }}
                 <button type="submit" class="btn btn-primary">Сохранить</button>
