--- a/templates/product_view.html
+++ b/templates/product_view.html
@@ -22,6 +22,7 @@
                         </div>
                         <a href="{% url 'products:index' %}">Вернуться</a>
                         <a href="{% url 'product_update' product.id %}">Изменить</a>
+                        <a href="{% url 'product_delete' product.id %}">Удалить</a>
                     </div>
                 </div>
 {% endblock %}
