--- a/templates/baskets.html
+++ b/templates/baskets.html
@@ -1,3 +1,5 @@
+{% load humanize %}
+
 {% if baskets %}
 
 <h4 class="mt-3 mb-3 d-flex justify-content-between align-items-center mb-3">
@@ -16,7 +18,7 @@
                                 <input name="basketID" type="number" class="form-control"
                                        value="{{ basket.quantity }}" min="0">
                             </div>
-                            <div class="col-lg-4">{{ basket.sum }} тенге</div>
+                            <div class="col-lg-4">{{ basket.sum|intcomma }} тенге</div>
                             <div class="col-lg-4">
                                 <a href="{% url 'products:basket_remove' basket.id %}">
                                     <i class="fas fa-trash"></i>
@@ -30,10 +32,10 @@
             <div class="card mb-3">
                 <div class="card-footer">
                     <p class="float-left">Итого</p>
-                    <h4 class="float-right">{{ baskets.total_sum }} тенге</h4>
+                    <h4 class="float-right">{{ baskets.total_sum|intcomma }} тенге</h4>
                 </div>
             </div>
-            <a class="btn btn-success btn-lg float-right" href="../orders/order-create.html">
+            <a class="btn btn-success btn-lg float-right" href="{% url 'orders:order_create' %}">
                 Оформить заказ
             </a>
 {% else %}
